<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_logo"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginStart="@dimen/ui_margin_normal_size"
            android:layout_marginLeft="@dimen/ui_margin_normal_size"
            android:layout_marginTop="@dimen/ui_margin_normal_size"
            android:layout_marginEnd="@dimen/ui_margin_normal_size"
            android:layout_marginRight="@dimen/ui_margin_normal_size"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/logo_bps" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/img_logo"
            app:layout_constraintStart_toStartOf="@+id/img_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/input_phone_number"
            app:helperText="Contoh: +6281224xxxxxx"
            app:layout_constraintEnd_toEndOf="@+id/tv_app_name"
            app:layout_constraintStart_toStartOf="@+id/tv_app_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="@dimen/ui_margin_normal_size"
            android:text="@string/btn_login"
            app:cornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/til_phone_number"
            app:layout_constraintStart_toStartOf="@+id/til_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/til_phone_number"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>